hphp/test/zend/good/Zend/tests/ns_054.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("spl")) die("skip SPL is no available");
}
