hphp/test/zend/bad/ext/phar/tests/phar_bz2.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (!extension_loaded("spl")) die("skip SPL not available");
if (!extension_loaded("bz2")) die("skip bz2 not available");
?>